...
    static var previews: some View {
        MovieDetailView(viewModel: MovieDetailViewModel(movie: Movie(adult: true,
                                                                     backdropPath: "/5P8SmMzSNYikXpxil6BYzJ16611.jpg",
                                                                     genreIDS: [1,2,3],
                                                                     id: 414906,
                                                                     originalLanguage: .en,
                                                                     originalTitle: "The Batman",
                                                                     overview: "In his second year of fighting crime, Batman uncovers corruption in Gotham City that connects to his own family while facing a serial killer",
                                                                     popularity: 4.0,
                                                                     posterPath: "/74xTEgt7R36Fpooo50r9T25onhq.jpg",
                                                                     releaseDate: "2022-03-01",
                                                                     title: "The Batman",
                                                                     video: true,
...
